--- a/package.json
+++ b/package.json
@@ -36,10 +36,8 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "blear.utils.typeis": "1.x",
-    "blear.utils.time": "1.x",
-    "blear.utils.function": "1.x",
-    "blear.utils.object": "1.x"
+    "blear.utils.url": "1.x",
+    "blear.utils.querystring": "1.x"
   },
   "devDependencies": {
     "jasmine-core": "^2.4.1",
