--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blear.utils.hashstring",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "hashstring utils",
   "scripts": {
     "live": "browser-sync start --config bs-config.js",
@@ -35,11 +35,11 @@
   "bugs": {
     "url": "https://github.com/blearjs/blear.utils.hashstring/issues"
   },
-  "dependencies": {},
-  "peerDependencies": {
+  "dependencies": {
     "blear.utils.url": "1.x",
     "blear.utils.querystring": "1.x"
   },
+  "peerDependencies": {},
   "devDependencies": {
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
